botón login fixed

--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
@@ -49,9 +49,8 @@
             android:layout_height="wrap_content"
             android:text="Entrar"
             android:id="@+id/botonEntrar"
-            android:background="#4a4a4a"
-            android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/contrasena"/>
+            android:layout_alignLeft="@+id/contrasena"
+            android:layout_alignParentBottom="true"/>
 
     <ImageView
             android:layout_width="wrap_content"
@@ -67,5 +66,6 @@
             android:text="Registrar"
             android:id="@+id/botonRegistrar"
             android:layout_alignTop="@+id/botonEntrar"
-            android:layout_alignRight="@+id/contrasena"/>
+            android:layout_alignRight="@+id/contrasena"
+            android:layout_alignBottom="@+id/botonEntrar"/>
 </RelativeLayout>
