--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/registro.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/registro.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@drawable/universo">
 
     <RelativeLayout
             android:layout_width="fill_parent"
@@ -21,7 +22,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignLeft="@+id/campoContrasena"
                 android:layout_marginTop="25dp"
-                android:hint="Nombre"/>
+                android:hint="Nombre"
+                android:background="#ffffff"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -33,7 +35,8 @@
                 android:layout_alignLeft="@+id/campoNombre"
                 android:layout_marginTop="16dp"
                 android:layout_alignRight="@+id/campoNombre"
-                android:hint="Apellidos"/>
+                android:hint="Apellidos"
+                android:background="#ffffff"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -45,7 +48,8 @@
                 android:layout_below="@+id/campoApellidos"
                 android:layout_alignLeft="@+id/campoApellidos"
                 android:layout_marginTop="21dp"
-                android:hint="Email"/>
+                android:hint="Email"
+                android:background="#ffffff"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -56,7 +60,8 @@
                 android:textSize="20dp"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:hint="Contraseña"/>
+                android:hint="Contraseña"
+                android:background="#ffffff"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -68,7 +73,8 @@
                 android:layout_below="@+id/campoContrasena"
                 android:layout_alignLeft="@+id/campoContrasena"
                 android:layout_marginTop="15dp"
-                android:hint="Confirmación"/>
+                android:hint="Confirmación"
+                android:background="#ffffff"/>
 
         <Button
                 android:layout_width="wrap_content"
@@ -77,6 +83,8 @@
                 android:id="@+id/buttonEnviar"
                 android:layout_below="@+id/campoConfirmacion"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="21dp"/>
+                android:layout_marginTop="21dp"
+
+                android:background="#51ff49"/>
     </RelativeLayout>
 </LinearLayout>
