--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/registro.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/registro.xml
@@ -18,13 +18,14 @@
                 android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/campoNombre"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignLeft="@+id/campoContrasena"
                 android:layout_marginTop="25dp"
                 android:hint="Nombre"
                 android:background="#ffffff"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                />
 
         <EditText
                 android:layout_width="wrap_content"
@@ -38,7 +39,8 @@
                 android:layout_alignRight="@+id/campoNombre"
                 android:hint="Apellidos"
                 android:background="#ffffff"
-                android:textColor="#0000"/>
+                android:textColor="#000000"
+                android:textSize="25dp"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -46,13 +48,13 @@
                 android:inputType="textEmailAddress"
                 android:ems="10"
                 android:id="@+id/campoEmail"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:layout_below="@+id/campoApellidos"
                 android:layout_alignLeft="@+id/campoApellidos"
                 android:layout_marginTop="21dp"
                 android:hint="Email"
                 android:background="#ffffff"
-                android:textColor="#0000"/>
+                android:textColor="#000000"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -60,12 +62,12 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/campoContrasena"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:hint="Contraseña"
                 android:background="#ffffff"
-                android:textColor="#0000"/>
+                android:textColor="#0b0607"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -73,13 +75,13 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/campoConfirmacion"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:layout_below="@+id/campoContrasena"
                 android:layout_alignLeft="@+id/campoContrasena"
                 android:layout_marginTop="15dp"
                 android:hint="Confirmación"
                 android:background="#ffffff"
-                android:textColor="#0000"/>
+                android:textColor="#060506"/>
 
         <Button
                 android:layout_width="wrap_content"
