--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
@@ -29,7 +29,8 @@
             android:background="#4a4a4a"
             android:layout_below="@+id/imageYoda"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"/>
+            android:layout_marginTop="25dp"
+            android:textSize="25dp"/>
 
     <EditText
             android:layout_width="wrap_content"
@@ -42,15 +43,17 @@
             android:background="#4a4a4a"
             android:layout_below="@+id/email"
             android:layout_alignLeft="@+id/email"
-            android:layout_marginTop="18dp"/>
+            android:layout_marginTop="18dp"
+            android:textSize="25dp"/>
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Entrar"
             android:id="@+id/botonEntrar"
+            android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/contrasena"
-            android:layout_alignParentBottom="true"/>
+            android:layout_marginLeft="45dp"/>
 
     <ImageView
             android:layout_width="wrap_content"
@@ -66,6 +69,5 @@
             android:text="Registrar"
             android:id="@+id/botonRegistrar"
             android:layout_alignTop="@+id/botonEntrar"
-            android:layout_alignRight="@+id/contrasena"
-            android:layout_alignBottom="@+id/botonEntrar"/>
+            android:layout_alignLeft="@+id/imagenLogoYoda"/>
 </RelativeLayout>
