--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/perfil.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/perfil.xml
@@ -11,17 +11,18 @@
             android:layout_height="wrap_content"
             android:text="Nombre"
             android:id="@+id/nombre"
-            android:textColor="#e5e000"
+            android:textColor="#fefefe"
             android:textSize="40dp"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Apellidos"
             android:id="@+id/apellidos"
-            android:textColor="#e5e000"
+            android:textColor="#fefefe"
             android:textSize="40dp"
             android:layout_below="@+id/nombre"
             android:layout_alignRight="@+id/nombre"
@@ -32,38 +33,40 @@
             android:layout_height="wrap_content"
             android:text="email"
             android:id="@+id/email"
-            android:textColor="#e5e000"
+            android:textColor="#fefefe"
             android:textSize="40dp"
             android:layout_below="@+id/apellidos"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Número de ventas"
             android:id="@+id/nventas"
-            android:textColor="#e5e000"
+            android:textColor="#fefefe"
             android:textSize="35dp"
+            android:layout_marginTop="40dp"
             android:layout_below="@+id/textView"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="12dp"/>
+            android:layout_alignParentLeft="true"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Número de pujas"
             android:id="@+id/textView"
-            android:textColor="#e5e000"
+            android:textColor="#fefefe"
             android:textSize="35dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"/>
+            android:layout_below="@+id/email"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="100dp"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100"
             android:id="@+id/npujas"
-            android:textColor="#e5e000"
+            android:textColor="#fefefe"
             android:textSize="35dp"
             android:layout_alignTop="@+id/textView"
             android:layout_alignParentRight="true"/>
@@ -73,7 +76,7 @@
             android:layout_height="wrap_content"
             android:text="100"
             android:id="@+id/textView2"
-            android:textColor="#e5e000"
+            android:textColor="#fefefe"
             android:textSize="35dp"
             android:layout_alignTop="@+id/nventas"
             android:layout_alignLeft="@+id/npujas"/>
