--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
@@ -7,16 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Principal"
-    android:background="@drawable/universo">
-
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageYoda"
-            android:src="@drawable/yoda_img"
-            android:layout_marginTop="24dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"/>
+    android:background="@drawable/fondo">
 
     <EditText
             android:layout_width="wrap_content"
@@ -27,10 +18,10 @@
             android:ems="10"
             android:id="@+id/email"
             android:background="#4a4a4a"
-            android:layout_below="@+id/imageYoda"
+            android:textSize="25dp"
+            android:layout_above="@+id/contrasena"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
-            android:textSize="25dp"/>
+            android:layout_marginBottom="20dp"/>
 
     <EditText
             android:layout_width="wrap_content"
@@ -41,10 +32,10 @@
             android:gravity="center"
             android:id="@+id/contrasena"
             android:background="#4a4a4a"
-            android:layout_below="@+id/email"
-            android:layout_alignLeft="@+id/email"
-            android:layout_marginTop="18dp"
-            android:textSize="25dp"/>
+            android:textSize="25dp"
+            android:layout_above="@+id/botonEntrar"
+            android:layout_alignRight="@+id/email"
+            android:layout_marginBottom="27dp"/>
 
     <Button
             android:layout_width="wrap_content"
@@ -53,21 +44,14 @@
             android:id="@+id/botonEntrar"
             android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/contrasena"
-            android:layout_marginLeft="45dp"/>
-
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imagenLogoYoda"
-            android:src="@drawable/meyodalogo"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_marginBottom="10dp"/>
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Registrate"
             android:id="@+id/botonRegistrar"
-            android:layout_alignTop="@+id/botonEntrar"
-            android:layout_alignLeft="@+id/imagenLogoYoda"/>
+            android:layout_below="@+id/contrasena"
+            android:layout_alignRight="@+id/contrasena"
+            android:layout_marginRight="11dp"/>
 </RelativeLayout>
