--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/list.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/list.xml
@@ -3,21 +3,24 @@
        				android:layout_height="wrap_content">
        				
        <ImageView android:id="@+id/icon"
-              android:layout_width="?android:attr/listPreferredItemHeight"
-             android:layout_height="wrap_content"
+              android:layout_width="90dp"
+             android:layout_height="140dp"
              android:layout_alignParentLeft="true"
+             android:baselineAlignBottom="false"
+             android:adjustViewBounds="false"
+             android:cropToPadding="false"
                />
 
        <TextView android:id="@+id/text1"
               android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/icon"
-             
+
              android:textAppearance="?android:attr/textAppearanceLarge"
-             
+
              android:layout_centerInParent="true"
              android:textColor="#000000"/>
-       
+
 </RelativeLayout>
 
 
