--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/mazo.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/mazo.xml
@@ -13,5 +13,15 @@
             android:layout_alignParentLeft="true"
             android:footerDividersEnabled="false"
             android:headerDividersEnabled="false"
-            android:focusable="false"/>
+            android:focusable="false"
+            android:layout_above="@+id/addbutton"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nueva carta a vender voy"
+            android:id="@+id/addbutton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"/>
 </RelativeLayout>
