--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/activity_principal.xml
@@ -12,20 +12,6 @@
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:hint="Email"
-            android:gravity="center"
-            android:ems="10"
-            android:id="@+id/email"
-            android:background="#4a4a4a"
-            android:textSize="25dp"
-            android:layout_above="@+id/contrasena"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"/>
-
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
             android:hint="Contraseña"
@@ -33,25 +19,42 @@
             android:id="@+id/contrasena"
             android:background="#4a4a4a"
             android:textSize="25dp"
-            android:layout_above="@+id/botonEntrar"
-            android:layout_alignRight="@+id/email"
-            android:layout_marginBottom="27dp"/>
+            style="@android:style/Widget.Holo.EditText"
+            android:layout_below="@+id/email"
+            android:layout_alignLeft="@+id/email"
+            android:layout_marginTop="11dp"
+            android:layout_alignRight="@+id/email"/>
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Entrar"
             android:id="@+id/botonEntrar"
-            android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/contrasena"
-            android:layout_marginBottom="10dp"/>
+            style="@android:style/Widget.Holo.Button"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/contrasena"
+            android:layout_centerHorizontal="true"/>
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Registrate"
             android:id="@+id/botonRegistrar"
-            android:layout_below="@+id/contrasena"
-            android:layout_alignRight="@+id/contrasena"
-            android:layout_marginRight="11dp"/>
+            style="@android:style/Widget.Holo.Button"
+            android:layout_below="@+id/botonEntrar"
+            android:layout_centerHorizontal="true"/>
+
+    <EditText
+            style="@android:style/Widget.Holo.EditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="Email"
+            android:gravity="center"
+            android:ems="10"
+            android:id="@+id/email"
+            android:background="#4a4a4a"
+            android:textSize="25dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"/>
 </RelativeLayout>
