--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/list.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/list.xml
@@ -19,7 +19,7 @@
              android:textAppearance="?android:attr/textAppearanceLarge"
 
              android:layout_centerInParent="true"
-             android:textColor="#000000"/>
+             android:textColor="#ffffff"/>
 
 </RelativeLayout>
 
