--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/mazo.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/mazo.xml
@@ -3,7 +3,8 @@
 <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@drawable/universo">
 
     <ListView
             android:layout_width="wrap_content"
@@ -23,5 +24,6 @@
             android:id="@+id/addbutton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            style="@android:style/Widget.Holo.Button"/>
 </RelativeLayout>
