--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/registro.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/registro.xml
@@ -88,11 +88,18 @@
                 android:layout_height="wrap_content"
                 android:text="Enviar"
                 android:id="@+id/buttonEnviar"
-                android:layout_below="@+id/campoConfirmacion"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"
 
-                />
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="17dp"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkbox"
+                android:layout_above="@+id/buttonEnviar"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="11dp"/>
     </RelativeLayout>
 
     <EditText
