--- a/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/list.xml
+++ b/movil/MeYodaDemoProject/MeYodaDemo/src/main/res/layout/list.xml
@@ -19,7 +19,10 @@
              android:textAppearance="?android:attr/textAppearanceLarge"
 
              android:layout_centerInParent="true"
-             android:textColor="#ffffff"/>
+             android:textColor="#ffffff"
+             android:shadowColor="#000000"
+             android:shadowRadius="2.0"
+             android:singleLine="false"/>
 
 </RelativeLayout>
 
